--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -4,11 +4,11 @@
   <form class="new-post-form">
     <div>
       <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" />
+      <input  class='text-black' id="post-title" name="post-title" />
     </div>
     <div>
       <label for="description">Here</label>
-      <input type="text" id="post-content" name="description" />
+      <input type="text" class='text-black'  id="post-content" name="description" />
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
