--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -3,11 +3,11 @@
 {{#if loggedIn}}
 <form class="comment-form">
   <div>
-    <textarea name="comment-body"></textarea>
+    <textarea class='text-black' name="comment-body" class=""></textarea>
   </div>
 
   <div>
-    <button type="submit">add comment</button>
+    <button type="submit" class= "update-post-btn m-5 py-2 px-4 border-4 text-2xl border-green-300 h-12 bg-black text-green-300">add comment</button>
   </div>
 </form>
 {{/if}}
