--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,18 +41,21 @@ button:hover {
   padding: 0;
 }
 
-textarea, input {
+textarea, input {  
+  color: #000;
   padding: .5%;
   border-radius: 5px;
   border: 1px solid #ccc;
 }
 
 textarea:focus, input:focus {
+  color: #000;
   outline: none;
   border: 1px solid #3486eb;
 }
 
 textarea {
+  color: #000;
   min-width: 40%;
   min-height: 100px;
 }
@@ -117,6 +120,10 @@ main {
   background-color: #ff643d;
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .post {
   margin-bottom: 2%;
   line-height: 150%;
@@ -131,15 +138,6 @@ main {
 .edit-link {
   display: block;
   margin: -1.5% 0 2% 0;
-}
-
-.upvote-btn {
-  background-color: #197d0f;
-  transition: background-color .1s;
-}
-
-.upvote-btn:hover {
-  background-color: #1f9c13;
 }
 
 .comment-form {
