--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,13 +4,13 @@
   <form class="new-post-form">
     <div>
       <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" />
+      <input type="text" class='text-black' id="post-title" name="post-title" />
     </div>
     <div>
       <label for="description">Here</label>
-      <input type="text" id="post-content" name="description" />
+      <input type="text" class='text-black' id="post-content" name="description" />
     </div>
-    <button type="submit" class="btn">Create</button>
+    <button type="submit" class=" border-2 border-green-300">Create</button>
   </form>
 </section>
 
@@ -21,7 +21,7 @@
     {{#each posts as |post|}}
     <li>
       {{> post-info post}}
-      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+      <a href="/dashboard/edit/{{post.id}}" class="edit-link m-5 py-2 px-4 border-4 text-2xl border-green-300 bg-black text-green-300">Edit post</a>
     </li>
     {{/each}}
   </ol>
