--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,28 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Just Tech News</title>
+    <link href="/dist/output.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-  <div class="wrapper">
-    <header>
+  <div class="wrapper m-5 py-2 px-4 border-4 text-xl border-green-300 bg-slate-600 text-green-300">
+    <header class="m-5 py-2 px-4 border-4 text-xl border-green-300 bg-black text-green-300">
 
       <nav>
         {{#if loggedIn}}
-        <a href="/dashboard">dashboard</a>
-        <button id="logout" class="btn-no-style">logout</button>
+        <a class="m-5 py-2 px-4 border-4 text-xl border-green-300 bg-black text-green-300" href="/">Home</a>
+        <a class="m-5 py-2 px-4 border-4 text-xl border-green-300 bg-black text-green-300" href="/dashboard">dashboard</a>
+        <button id="logout" class="m-5 py-2 px-4 border-4 text-xl border-green-300 bg-black text-green-300">logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a class="m-5 py-2 px-4 border-4 text-xl border-green-300 bg-black text-green-300" href="/login">login</a>
         {{/if}}
       </nav>
-      <h1>Blog</h1>
+      <h1 class="m-5 py-2 px-4 text-sm bg-black text-green-300" >TP Blogs</h1>
     </header>
     <main>
       {{{ body }}}
     </main>
-    <footer>
-      Thanks for visiting!
+    <footer class="text-2xl bg-black text-green-300 border-2 border-sky-400">
+      TECH PLACE: a place for tech!
     </footer>
   </div>
   
