--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,32 +1,29 @@
 <form class="login-form">
   <div>
-    <label for="email-login">email:</label>
-    <input type="text" id="email-login" />
+    <label for=email-login class="m-5 py-2 px-4 text-sm  text-green-300">username:</label>
+    <input type="text" class="text-black" id="email-login" />
   </div>
   <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
+    <label for="password-login" class="m-5 py-2 px-4 text-sm  text-green-300" >password:</label>
+    <input type="password" class="text-black" id="password-login" />
   </div>
   <div>
-    <button type="submit">login</button>
+    <button type="submit" class= "update-post-btn m-5 py-2 px-4 border-4 text-2xl border-green-300 bg-black text-green-300">login</button>
   </div>
 </form>
 
 <form class="signup-form">
   <div>
-    <label for="username-signup">username:</label>
-    <input type="text" id="username-signup" />
+    <label for="username-signup" class="m-5 py-2 px-4 text-sm text-green-300">username:</label>
+    <input type="text" class="text-black"  id="username-signup" />
   </div>
   <div>
-    <label for="email-signup">email:</label>
-    <input type="text" id="email-signup" />
+  <div>
+    <label for="password-signup" class="m-5 py-2 px-4 text-sm text-green-300">password:</label>
+    <input type="password" class="text-black" id="password-signup" />
   </div>
   <div>
-    <label for="password-signup">password:</label>
-    <input type="password" id="password-signup" />
-  </div>
-  <div>
-    <button type="submit">signup</button>
+    <button type="submit" class= "update-post-btn m-5 py-2 px-4 border-4 text-2xl border-green-300 bg-black text-green-300">signup</button>
   </div>
 </form>
 
