--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,6 +18,9 @@
     <input type="text" class="text-black"  id="username-signup" />
   </div>
   <div>
+    <label for="email-signup">email:</label>
+    <input type="text" id="email-signup" />
+  </div>  
   <div>
     <label for="password-signup" class="m-5 py-2 px-4 text-sm text-green-300">password:</label>
     <input type="password" class="text-black" id="password-signup" />
