--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -10,7 +10,7 @@
       <label for="description">Here</label>
       <input type="text" class='text-black'  id="post-content" name="description" />
     </div>
-    <button type="submit" class="btn">Create</button>
+    <button type="submit"  class="btn m-5 py-2 px-4 border-4 text-xl border-green-300 bg-black text-green-300" >Create</button>
   </form>
 </section>
 
