--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech News</title>
+  <title>Tek Place</title>
     <link href="/dist/output.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -29,7 +29,7 @@
       {{{ body }}}
     </main>
     <footer class="text-2xl bg-black text-green-300 border-2 border-sky-400">
-      TECH PLACE: a place for tech!
+      TEK PLACE: a place for tech!
     </footer>
   </div>
   
